@@ -1,5 +1,6 @@
 package no.unit.identityservice.fsproxy;
 
+import static nva.commons.core.attempt.Try.attempt;
 import java.io.IOException;
 import java.net.URI;
 import java.net.http.HttpClient;
@@ -13,17 +14,18 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.identityservice.fsproxy.model.course.FsCourse;
 import no.unit.identityservice.fsproxy.model.course.FsCoursesSearchResult;
-import no.unit.identityservice.fsproxy.model.fagperson.FsCourseActivity;
-import no.unit.identityservice.fsproxy.model.fagperson.FsRoleToStaffPerson;
-import no.unit.identityservice.fsproxy.model.fagperson.FsRolesToPersonSearchResult;
-import no.unit.identityservice.fsproxy.model.fagperson.FsUriToCourseActivity;
-import no.unit.identityservice.fsproxy.model.fagperson.FsUriToCourseActivityContainer;
 import no.unit.identityservice.fsproxy.model.person.FsIdNumber;
 import no.unit.identityservice.fsproxy.model.person.FsPersonSearchResponse;
 import no.unit.identityservice.fsproxy.model.person.NationalIdentityNumber;
+import no.unit.identityservice.fsproxy.model.staffperson.FsCourseActivity;
+import no.unit.identityservice.fsproxy.model.staffperson.FsRoleToStaffPerson;
+import no.unit.identityservice.fsproxy.model.staffperson.FsRolesToPersonSearchResult;
+import no.unit.identityservice.fsproxy.model.staffperson.FsUriToCourseActivity;
+import no.unit.identityservice.fsproxy.model.staffperson.FsUriToCourseActivityContainer;
 import no.unit.nva.commons.json.JsonUtils;
 import nva.commons.core.Environment;
 import nva.commons.core.JacocoGenerated;
+import nva.commons.core.attempt.Try;
 import nva.commons.core.paths.UriWrapper;
 
 public class FsApi {
@@ -45,10 +47,11 @@ public class FsApi {
     private final String username = ENVIRONMENT.readEnv("FS_USERNAME");
     private final String password = ENVIRONMENT.readEnv("FS_PASSWORD");
     private final URI baseFsHostUrl;
+    private final HttpClient httpClient;
 
-    @SuppressWarnings("PMD")
     public FsApi(HttpClient httpClient, URI baseFsHostUrl) {
         this.baseFsHostUrl = baseFsHostUrl;
+        this.httpClient = httpClient;
     }
 
     @JacocoGenerated
@@ -56,44 +59,28 @@ public class FsApi {
         this(HttpClient.newBuilder().build(), FS_HOST);
     }
 
-    public FsIdNumber getFsId(NationalIdentityNumber nin) throws IOException, InterruptedException {
-
-        var response = getResponse(createSearchPersonUri(nin));
-        var responseBody = response.body();
-        var fsIdSearchResult = JsonUtils.dtoObjectMapper.readValue(responseBody, FsPersonSearchResponse.class);
-
-        if (fsIdSearchResult.getSearchResults().size() == 0) {
-            throw new UserPrincipalNotFoundException(nin.toString());
-        } else {
-            return fsIdSearchResult.getSearchResults().get(0).getFsPerson().getFsIdNumber();
-        }
-    }
-
     @JacocoGenerated
     public List<FsCourse> getCourses(NationalIdentityNumber nin) throws IOException, InterruptedException {
         var fsId = getFsId(nin);
         var coursesIfStudent = getCoursesToStudent(fsId);
         var roles = getRolesToStaffPerson(fsId);
-        var coursesUri = roles.stream().map(role -> {
-            try {
-                return getCourseUriToGivenRole(role);
-            } catch (IOException | InterruptedException e) {
-                throw new RuntimeException(e);
-            }
-        }).collect(Collectors.toList());
 
-        var coursesIfStaff = coursesUri.stream().map(uri -> {
-            try {
-                return getCourseToStaffPersonGivenUriToCourse(uri);
-            } catch (IOException | InterruptedException e) {
-                throw new RuntimeException(e);
-            }
-        }).collect(Collectors.toList());
+        var coursesUri = roles.stream().map(attempt(this::getCourseUriToGivenRole)).map(Try::orElseThrow).toList();
+
+        var coursesIfStaff = coursesUri.stream()
+                                 .map(attempt(this::getCourseToStaffPersonGivenUriToCourse))
+                                 .map(Try::orElseThrow)
+                                 .collect(Collectors.toList());
 
         return Stream.concat(coursesIfStaff.stream(), coursesIfStudent.stream()).collect(Collectors.toList());
     }
 
-    public List<FsCourse> getCoursesToStudent(FsIdNumber fsIdNumber) throws IOException, InterruptedException {
+    private static URI readFsHost() {
+        var hostUriString = ENVIRONMENT.readEnv("FS_HOST");
+        return URI.create(hostUriString);
+    }
+
+    private List<FsCourse> getCoursesToStudent(FsIdNumber fsIdNumber) throws IOException, InterruptedException {
 
         var response = getResponse(createSearchCourseUri(fsIdNumber));
         var responseBody = response.body();
@@ -102,15 +89,7 @@ public class FsApi {
         return fsCoursesSearchResult.getItems().stream().map(c -> c.getId().getCourse()).collect(Collectors.toList());
     }
 
-    public Boolean getFsPersonStatus(NationalIdentityNumber nin) throws IOException, InterruptedException {
-        var response = getResponse(createSearchPersonUri(nin));
-        var responseBody = response.body();
-        var fsIdSearchResult = JsonUtils.dtoObjectMapper.readValue(responseBody, FsPersonSearchResponse.class);
-
-        return fsIdSearchResult.getSearchResults().get(0).getFsPerson().getStaffPerson().isEmpty();
-    }
-
-    public List<FsRoleToStaffPerson> getRolesToStaffPerson(FsIdNumber fsIdNumber)
+    private List<FsRoleToStaffPerson> getRolesToStaffPerson(FsIdNumber fsIdNumber)
         throws IOException, InterruptedException {
 
         var response = getResponse(createSearchRolesToStaffPersonUri(fsIdNumber));
@@ -120,7 +99,7 @@ public class FsApi {
         return fsRolesSearchResult.getItems();
     }
 
-    public FsUriToCourseActivity getCourseUriToGivenRole(FsRoleToStaffPerson role)
+    private FsUriToCourseActivity getCourseUriToGivenRole(FsRoleToStaffPerson role)
         throws IOException, InterruptedException {
         var response = getResponse(createSearchCourseToRoleUri(role.getUriToRole()));
         var responseBody = response.body();
@@ -129,7 +108,7 @@ public class FsApi {
         return fsCourse.getCourseUri();
     }
 
-    public FsCourse getCourseToStaffPersonGivenUriToCourse(FsUriToCourseActivity course)
+    private FsCourse getCourseToStaffPersonGivenUriToCourse(FsUriToCourseActivity course)
         throws IOException, InterruptedException {
         var response = getResponse(createSearchCourseForStaffPersonUri(course.getUri()));
         var responseBody = response.body();
@@ -138,8 +117,7 @@ public class FsApi {
         return fsCourse.getCourse();
     }
 
-    public HttpResponse<String> getResponse(URI uri) throws IOException, InterruptedException {
-        var httpClient = HttpClient.newBuilder().build();
+    private HttpResponse<String> getResponse(URI uri) throws IOException, InterruptedException {
         var httpRequest = HttpRequest.newBuilder(uri)
                               .header("Authorization", getBasicAuthenticationHeader())
                               .GET()
@@ -148,9 +126,16 @@ public class FsApi {
         return httpClient.send(httpRequest, HttpResponse.BodyHandlers.ofString());
     }
 
-    private static URI readFsHost() {
-        var hostUriString = ENVIRONMENT.readEnv("FS_HOST");
-        return URI.create(hostUriString);
+    private FsIdNumber getFsId(NationalIdentityNumber nin) throws IOException, InterruptedException {
+
+        var response = getResponse(createSearchPersonUri(nin));
+        var responseBody = response.body();
+        var fsIdSearchResult = JsonUtils.dtoObjectMapper.readValue(responseBody, FsPersonSearchResponse.class);
+
+        return fsIdSearchResult.getSearchResult()
+                   .orElseThrow(() -> new UserPrincipalNotFoundException(nin.toString()))
+                   .getFsPerson()
+                   .getFsIdNumber();
     }
 
     private URI createSearchPersonUri(NationalIdentityNumber nin) {
@@ -163,15 +148,14 @@ public class FsApi {
                    .getUri();
     }
 
-    @SuppressWarnings("PMD")
-    private URI createSearchCourseUri(FsIdNumber FsIdNumber) {
+    private URI createSearchCourseUri(FsIdNumber fsIdNumber) {
         final String year = Year.now().toString();
 
         return UriWrapper.fromUri(baseFsHostUrl)
                    .addChild(STUDENTUNDERVISNING_PATH)
                    .addQueryParameter(DB_IDENTIFIER, "true")
                    .addQueryParameter(LIMIT_IDENTIFIER, LIMIT_VALUE)
-                   .addQueryParameter(PERSON_PERSONLOPENUMMER_PATH, FsIdNumber.toString())
+                   .addQueryParameter(PERSON_PERSONLOPENUMMER_PATH, fsIdNumber.toString())
                    .addQueryParameter(UNDERVISNING_SEMESTER_AR_PATH, year)
                    .getUri();
     }
